[package]
name = "keyserver"
version = "0.1.0"
authors = ["Andrea Tomasi <tomasiandrea.at@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
keyllib = {"path" = "../keyllib"}
hyperlocal = "0.6"
hyper = "0.12.29"
futures = "0.1.27"
chrono = "0.4.6"
